<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SSRSI</string>
    <string name="logo_ssrsi_description">Logo SSRSI</string>
    <string name="trabajo_terminal">Trabajo Terminal</string>

    <string name="title_activity_home">Inicio</string>
    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>

    <string name="action_settings">Ajustes</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-Ingresa Tu Password</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_name">Nombre (Opcional)</string>
    <string name="hint_last">Apellido Paterno (Opcional)</string>
    <string name="hint_maiden">Apellido Materno (Opcional)</string>

    <string name="update">Actualizar</string>

    <string name="login_button">Iniciar Sesión</string>
    <string name="link_register_text_view">¿No tienes cuenta? Regístrate</string>
    <string name="link_login_text_view">¿Ya te registraste? Inicia Sesión</string>

    <string name="details_label">Detalles</string>

    <string name="place_name">Nombre de Sitio</string>
    <string name="place_address">Dirección</string>
    <string name="place_music">Música en Vivo</string>
    <string name="place_like">¡Me gusta!</string>

    <string name="place_name_id">El gallo</string>
    <string name="place_address_id">Centro</string>
    <string name="imagen_perfil_de_usuario">Imagen perfil de usuario</string>
    <string name="default_perfil_usuario">Usuario</string>

    <!-- mensajes -->
    <string name="image_message_description">Mensaje</string>

    <string name="sign_in">Inicia Sesión</string>
    <string name="sign_up">Regístrate</string>
    <string name="action_logout">Cerrar Sesión</string>

    <!-- campos de busqueda -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_question">&#160;&#160;&#160;¿Qué buscas?</string>
    <string name="place_question">¿Sitio?</string>
    <string name="price_question">¿Qué precio?</string>
    <string name="distance_question">¿A qué distancia?</string>
    <string name="music_check">&#160;&#160;¿Música?</string>
    <string name="with_music">&#160;&#160;Sin música</string>
    <string name="without_music">&#160;&#160;Con música</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="flecha">Flecha</string>
    <string name="names_info">Otros Nombres</string>
    <string name="categories">Categorías</string>
    <string name="ratings">Calificaciones</string>
    <string name="more_info">Más Información</string>
    <string name="location">Localización</string>
    <string name="no_visitado">No visitado</string>
    <string name="visitado">Visitado</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="rating">Calificación</string>
    <string name="comentarios">Comentarios</string>
    <string name="comment_user">Tu comentario acerca del precio</string>
    <string name="user_opinion">Tu opinión</string>
    <string name="opinion_button">Enviar opinión</string>
    <string name="home_drawer">Inicio</string>
    <string name="profile_drawer">Perfil</string>
    <string name="visted_drawer">Visitados</string>
    <string name="places_drawer">Sitios</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="imagen_de_bar_restaurante">Imagen de bar/restaurante</string>
    <string name="bar_icon">bar icon</string>

    <string-array name="nav_item_activity_titles">
        <item>Inicio</item>
        <item>Perfil</item>
        <item>Visitados</item>
        <item>Sitios</item>
        <item>Búsqueda</item>
    </string-array>

    <string-array name="places_type">
        <item>¿Qué tipo de lugar?</item>
        <item>Bar</item>
        <item>Restaurante</item>
    </string-array>

    <string-array name="price">
        <item>¿Qué precio?</item>
        <item>Precios accesibles</item>
        <item>Un muy buen precio</item>
        <item>Un buen precio</item>
        <item>Una buena relación precio-costo</item>
        <item>Precios no tan caros</item>
        <item>Precios muy buenos</item>
        <item>Los precios justos para la calidad</item>
        <item>Un poco caro</item>
        <item>Precios un poco elevados</item>
        <item>En general caro</item>
        <item>Precios algo caros</item>
        <item>Comida cara para la ración que sirven</item>
        <item>Precios excesivos</item>
        <item>Caro y malo</item>
    </string-array>

    <string-array name="distance">
        <item>¿A qué distancia?</item>
        <item>Cerca</item>
        <item>Mediana</item>
        <item>Lejos</item>
    </string-array>

</resources>
