<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/first_section" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_drawer" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile_drawer" />
        <item
            android:id="@+id/nav_visited"
            android:title="@string/visted_drawer" />
        <item
            android:id="@+id/nav_places"
            android:title="@string/places_drawer" />
      <!--  <item
            android:id="@+id/nav_search"
            android:title="Busqueda" />-->
    </group>

    <group android:id="@+id/second_section" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>