<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_name" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_address" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/place_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_music" />

    <CheckBox
        style="?android:attr/starStyle"
        android:id="@+id/place_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_like" />

</LinearLayout>