<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/logo_ssrsi_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ssrsi" />

        <!--<ImageButton-->
            <!--android:id="@+id/user_profile_photo"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_below="@+id/logo_image_view"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@drawable/user_profile_background"-->
            <!--android:elevation="4dp"-->
            <!--android:src="@drawable/user" />-->

        <!-- usuario -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/user"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:hint="@string/hint_user"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/email"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/lock"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- repassword -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_re_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/lock"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- nombre -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/extra_user"
                android:drawableLeft="@drawable/extra_user"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- paterno -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_last"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/extra_user"
                android:drawableLeft="@drawable/extra_user"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!-- materno -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_maiden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextMaidenName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/extra_user"
                android:drawableLeft="@drawable/extra_user"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableTint="@color/primaryDarkerColor"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUpNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/link_login_text_view"
            android:textSize="16sp"
            android:theme="@style/PrimaryFlatButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUpNow"
            app:layout_constraintVertical_bias="0.936" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>